--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     </div>
   </template>
 
-  <script type="module" src="./js/main.js"></script>
+  <script src="./public/bundle.js"></script>
 
 </body>
 
