Изменил функцию показа добавленных изображений

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
     </div>
   </template>
 
-  <!-- <script type="module" src="./js/main.js"></script> -->
-  <script src="./public/bundle.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <!-- <script src="./public/bundle.js"></script> -->
 
 </body>
 
